--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+font-family: 'Overpass', sans-serif;
+font-size: 15px;
+
+}
+li{
+    margin:0 17px 0 ;
+}
